<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
            android:orientation="vertical"
              xmlns:card_view="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view1"
        android:layout_width="match_parent"
        android:layout_height="225dp"
        android:layout_gravity="center"
        android:tag="@string/baoxian1"
        android:layout_marginTop="5dp"
        card_view:cardUseCompatPadding="true"
        card_view:cardCornerRadius="4dp"
        card_view:cardElevation="2dp">
        <!--保险到底保险吗-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:src="@drawable/gx_420"
                android:id="@+id/imageView6"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="29sp"
                android:text="保险到底保险吗"
                />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <!--香港保险现形记-->
    <android.support.v7.widget.CardView
        android:id="@+id/card_view2"
        android:layout_width="match_parent"
        android:layout_height="225dp"
        android:tag="@string/baoxian2"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        card_view:cardUseCompatPadding="true"
        card_view:cardCornerRadius="4dp"
        card_view:cardElevation="2dp">
        <!--分析结果-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:src="@drawable/xianxin_420"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="29sp"
                android:text="香港保险现形记"
                />
        </LinearLayout>


    </android.support.v7.widget.CardView>

    <!--什么是强积金-->
    <android.support.v7.widget.CardView
        android:id="@+id/card_view3"
        android:layout_width="match_parent"
        android:layout_height="225dp"
        android:layout_gravity="center"
        android:tag="@string/baoxian3"
        android:layout_marginTop="5dp"
        card_view:cardUseCompatPadding="true"
        card_view:cardCornerRadius="4dp"
        card_view:cardElevation="2dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:src="@drawable/qiangji_420"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="29sp"
                android:text="什么是强积金"
                />
        </LinearLayout>
    </android.support.v7.widget.CardView>
    </LinearLayout>
</ScrollView>