<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              xmlns:card_view="http://schemas.android.com/apk/res-auto">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


       <android.support.v7.widget.CardView
        android:id="@+id/card_view1"
        android:tag="@string/neidike"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        card_view:cardUseCompatPadding="true"
        card_view:cardCornerRadius="4dp"
        card_view:cardElevation="2dp">
        <!--分析结果-->
           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:orientation="vertical">
               <ImageView
                   android:layout_width="match_parent"
                   android:layout_height="160dp"
                   android:src="@drawable/hj_420"/>
               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:textSize="29sp"
                   android:text="内地客香港买金热 银行保值供不应求"
                   />
           </LinearLayout>

       </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:id="@+id/card_view2"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:tag="@string/neidike11"
        card_view:cardUseCompatPadding="true"
        card_view:cardCornerRadius="4dp"
        card_view:cardElevation="2dp">
        <!--内地客11-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:src="@drawable/neidi_420"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="29sp"
                android:text="香港内地客户保费增倍"
                />
        </LinearLayout>

    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:id="@+id/card_view3"
        android:layout_width="match_parent"
        android:layout_height="265dp"
        android:layout_gravity="center"
        android:tag="@string/icac"
        android:layout_marginTop="5dp"
        card_view:cardUseCompatPadding="true"
        card_view:cardCornerRadius="4dp"
        card_view:cardElevation="2dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="190dp"
                android:src="@drawable/icac_420"
                android:id="@+id/imageView5"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="28sp"
                android:text="ICAC查中交建香港办公室 涉财务总监"
                />
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>
</ScrollView>
