<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            xmlns:card_view="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:id="@+id/card_view1"
            android:layout_width="match_parent"
            android:layout_height="225dp"
            android:layout_gravity="center"
            android:tag="@string/shiyanshi1"
            android:layout_marginTop="5dp"
            card_view:cardUseCompatPadding="true"
            card_view:cardCornerRadius="4dp"
            card_view:cardElevation="2dp">
            <!--时代公司卖宠物保险-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    android:src="@drawable/game_420"
                    android:id="@+id/imageView6"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="29sp"
                    android:text="时代公司卖宠物保险？"
                    />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <!--香港保险现形记-->
        <android.support.v7.widget.CardView
            android:id="@+id/card_view2"
            android:layout_width="match_parent"
            android:layout_height="225dp"
            android:tag="@string/shiyanshi2"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            card_view:cardUseCompatPadding="true"
            card_view:cardCornerRadius="4dp"
            card_view:cardElevation="2dp">
            <!--丢掉保险推销工作的史努比-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    android:src="@drawable/shinubi_420"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="29sp"
                    android:text="丢掉保险推销工作的史努比 要被卖了"
                    android:id="@+id/textView4"/>
            </LinearLayout>


        </android.support.v7.widget.CardView>

        <!--高风险高收益-->
        <android.support.v7.widget.CardView
            android:id="@+id/card_view3"
            android:layout_width="match_parent"
            android:layout_height="225dp"
            android:layout_gravity="center"
            android:tag="@string/shiyanshi3"
            android:layout_marginTop="5dp"
            card_view:cardUseCompatPadding="true"
            card_view:cardCornerRadius="4dp"
            card_view:cardElevation="2dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    android:src="@drawable/hose_420"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="29sp"
                    android:text="高风险高收益 火箭公司保险"
                    />
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</ScrollView>